New: Created Home bottom toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">OMTest</string>
+
+    <string name="ok">Ok</string>
+    <string name="title_activity_home">MainActivity</string>
+    <string name="title_home">Peliculas</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_favorites">Favoritos</string>
+
 </resources>
