--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,12 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_favorites">Favoritos</string>
+    <string name="title_movies_not_found">Movies not found</string>
+    <string name="retry">Retry</string>
+    <string name="loading">Loading...</string>
+    <string name="server_error">Server connection error</string>
+    <string name="message_generic_error">" Error ocurred"</string>
+    <string name="title_generic_error">Ups!</string>
+    <string name="network_error">Network error</string>
 
 </resources>
